# hello5

./: BUILD  Cargo.toml  Dockerfile  Gemfile  WORKSPACE  composer.json  docker-compose.override.yml  docker-compose_test_comprehensive.yml  go.mod  package.json  pubspec.yaml  requirements.txt
.github/: repository.yml
.github/workflows/: config.yml  test_comprehensive.yml
backend-services/: Dockerfile  requirements.txt
frontend-workspace/: Dockerfile  package.json
internal-packages/secret-lib/: package.json
internal-python-libs/company-auth/: requirements.txt
internal-rust/: Cargo.toml
microservices/api/: Dockerfile.api  package.json
microservices/auth-service/: requirements.txt
microservices/bazel-service/: WORKSPACE
microservices/data-processor/: Cargo.toml  Dockerfile.prod
microservices/flutter-service/: pubspec.yaml
microservices/go-service/: go.mod
microservices/php-service/: composer.json
microservices/ruby-api/: Gemfile
nonexistent-workspace/auth-module/: package.json
rust-workspace/private-crate/: Cargo.toml
workspace/: missing-rust-tool  nonexistent-python-lib
workspace/missing-php-package/: composer.json
workspace/missing-rust-tool/: Cargo.toml
workspace/nonexistent-python-lib/: requirements.txt
